--- a/public/index.html
+++ b/public/index.html
@@ -202,9 +202,10 @@ body {
       </header>
 
       <main role="main" class="inner cover">
+		<img src="img/matt.png" class="rounded mx-auto d-block" alt="..." height="400px">
         <h1 class="cover-heading">Matt</h1>
         <p class="lead">
-			UWU
+			hi my name is matt and thank you for coming to my news website about space and journalism. in this website i will provide frequent updates about my life and things that i care deeply about - like my friends and my football team (saint kilda) and my dog mister ben. make sure to bookmark this website in your internet window (its like subscribing) but you dont get notifications so please check each day to see if there are any more news articles i have posted.
         </p>
       </main>
 
